--- a/_data/home.yml
+++ b/_data/home.yml
@@ -5,38 +5,14 @@ navbar_entries:
   - title: blog
     url: blog
 
-project_entries:
-  - title: Project 1
-    url: overview-post
-    desc: This is an example project, configured in _data/home.yml
-
-  - title: Project 2
-    url: overview-post
-    desc: Projects are shown in card layout
-
-  - title: Project 3
-    url: overview-post
-    desc: You can control visibility from _config.yml file
-
-  - title: Project 4
-    url: overview-post
-    desc: This project uses highlight markup, configured in _data/home.yml
-    highlight: WIP
-
-  - title: Project 5
-    url: overview-post
-    desc: Moonwalk also has horizontal list (used in header and footer)
-    highlight: WIP
-
-  - title: Project 6
-    url: overview-post
-    desc: It also has a scalable vertical list (in case you need it)
+  - title: cv
+    url: cv
 
 footer_entries:
   - title: LinkedIn
     url: https://www.linkedin.com/in/mateusz-ratman/
 
-  - title: github
+  - title: Github
     url: https://github.com/mratman1
 
 misc_entries:
